--- a/ai_codes.toml
+++ b/ai_codes.toml
@@ -13,8 +13,8 @@ The toml file has two sections:
         - if extension field is missing, common language<-->extension mapping such as python<-->py should be used, create a table cover at least python, bash, javascript.
 2. project section: contains the following fields:
     * requirements: a detailed description of the program
-    * specs(optional): a list of specs for the program to use.   Specs are information that the program should reference to when generating the code
-    * hints(optional): a list of hints for the program, hints are used to guide the AI coder in generating the source code.
+    * specs(optional): specs for the program to use.   Specs are information that the program should reference to when generating the code
+    * hints(optional): hints for the program, hints are used to guide the AI coder in generating the source code.
 
 AI coder takes the toml file from command line argument, then generate the source code for the program based on the toml file.  The format of toml file is described as above.
 
@@ -24,7 +24,7 @@ When using openai api to generate token, check prompt token and decode token use
     cost of CNY = (0.1 * prompt_tokens + 0.2 * completion_tokens) /1000000
 Then print the cost of the code generation.
 '''
-specs=['''
+specs='''
 ## spec 1
 In order to generate code, AI coder should utilize DeepSeek 'chat prefix completion' feature, the description of this feature is as follow:
 
@@ -53,14 +53,12 @@ In order to generate code, AI coder should utilize DeepSeek 'chat prefix complet
         stop=["`"+"``\n"],
     )
     print(response.choices[0].message.content)
-''',
-'''
+
 ## spec 2
 api_token is taken from OPENAI_API_KEY environment variable, deepseek base_url is taken from OPENAI_API_URL   env. model name is taken from OPENAI_API_MODEL env.
 '''
-]
-hints=['''
+hints='''
 ## hint 1
 For any code you want to generate "```", use the following instead:
 "`"+"``", the purpose is to avoid ``` in the code to stop code generation
-''']
+'''
