--- a/tests/test.toml
+++ b/tests/test.toml
@@ -6,15 +6,15 @@ description="A test program for ai_coding"
 requirements="""
 Write a program that test ai_coding or program with same intent.  The program calls the following three tests:
 1. hello world test
-python ai_coding.py helloworld.toml
+python ai_coding.py examples/helloworld.toml
 then execute the following command:
 python helloworld.py
 2. qsort test
-python ai_coding.py qsort.toml
+python ai_coding.py examples/qsort.toml
 then execute the following command:
 python qsort.py 3 1 4 1 5 9 2 6
 3. askllm test
-python ai_coding.py askllm.toml
+python ai_coding.py examples/askllm.toml
 then execute the following command:
 bash askllm.sh whats the largest bird in the world?
 
