--- a/examples/askllmpy.toml
+++ b/examples/askllmpy.toml
@@ -4,6 +4,7 @@ language="python"
 description="A CLI program that allows you to ask questions to deepseek"
 [project]
 requirements="""Write a program that takes a question from command line and send to deepseek with openai api and show answer on command line.  The question is the whole command line, so arg1, arg2, ... would all be part of the question.  Beautify the output since the output is markdown format.  Also I want to see answer as fast as possible, can you stream the output with beautified format so it looks way cooler?
+When I press ctrl-C, don't print stack trace instead stop generate output and print "Goodbye!" and exit.
 """
 specs="""
 ## spec 1
