--- a/.github/workflows/test_codegen.yml
+++ b/.github/workflows/test_codegen.yml
@@ -28,27 +28,25 @@ jobs:
           echo "Generating test script"
           python ai_coding.py tests/test.toml
           bash test.sh ai_coding.py 2>&1 |tee $GITHUB_STEP_SUMMARY
-
-      - name: Upload artifact test.sh
-        uses: actions/upload-artifact@v4
-        with:
-          name: test.sh
-          path: test.sh
-
-      - name: Upload artifact helloworld.py
-        uses: actions/upload-artifact@v4
-        with:
-          name: helloworld.py
-          path: helloworld.py
-
-      - name: Upload artifact qsort.py
-        uses: actions/upload-artifact@v4
-        with:
-          name: qsort.py
-          path: qsort.py
-
-      - name: Upload artifact askllm.py
-        uses: actions/upload-artifact@v4
-        with:
-          name: askllm.py
-          path: askllm.py
+          echo "==================="
+          echo "Showing test script"
+          echo "-------------------"
+          cat test.sh
+          echo "==================="
+          echo "Running test"
+          bash test.sh ai_coder.py 2>&1 |tee $GITHUB_STEP_SUMMARY
+          echo "==================="
+          echo "Showing helloworld script"
+          echo "-------------------"
+          cat helloworld.py
+          echo "==================="
+          echo "==================="
+          echo "Showing qsort script"
+          echo "-------------------"
+          cat qsort.py
+          echo "==================="
+          echo "==================="
+          echo "Showing askllm script"
+          echo "-------------------"
+          cat askllm.sh
+          echo "==================="
